# water-credits-contracts

./: CHANGELOG.md  Cargo.toml  PR_DESCRIPTION.md  PR_DESCRIPTION_34.md  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml
.patches/soroban-sdk-macros/: .cargo_vcs_info.json  Cargo.toml
.patches/soroban-sdk-macros/src/: derive_fn.rs
contracts/credit_factory/src/: lib.rs
contracts/credit_token/src/: lib.rs
contracts/governance/src/: lib.rs
contracts/project_registry/src/: lib.rs
contracts/retirement_registry/src/: lib.rs
contracts/shared/src/: lib.rs
contracts/verification_oracle/src/: lib.rs
doc/: MATH.md  SPEC.md
tests/: Cargo.toml  build.rs
tests/tests/: credit_formula_bounds.rs  credit_formula_fuzz.rs  credit_lifecycle.rs  full_lifecycle.rs  median_gas_benchmark.rs  per_project_baseline.rs  project_id_compat.rs  verification_oracle_supply_cap.rs
