[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
testutils = [
    "soroban-sdk/testutils",
    "credit_token/testutils",
    "credit_factory/testutils",
    "verification_oracle/testutils",
    "retirement_registry/testutils",
    "project_registry/testutils",
    "governance/testutils",
]

[dependencies]
credit_token = { path = "../contracts/credit_token", features = ["testutils"] }
credit_factory = { path = "../contracts/credit_factory", features = ["testutils"] }
verification_oracle = { path = "../contracts/verification_oracle", features = ["testutils"] }
retirement_registry = { path = "../contracts/retirement_registry", features = ["testutils"] }
project_registry = { path = "../contracts/project_registry", features = ["testutils"] }
governance = { path = "../contracts/governance", features = ["testutils"] }
shared = { path = "../contracts/shared" }
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[build-dependencies]
# Used by build.rs to normalize the credit_token WASM encoding for the
# protocol-20 VM (library equivalent of the Makefile's `fix-wasm` target).
wat = "=1.212.0"
wasmprinter = "=0.212.0"

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = "allow"
